--- a/styles/style.css
+++ b/styles/style.css
@@ -30,9 +30,337 @@ blockquote,
 fieldset {
   margin: 0;
   padding: 0;
+  border: 0;
 }
 
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end; 
+  max-width: 1140px;
+  width: 100%;
+  padding: 133px 30px;
+}
+
+.result {
+  margin-right: 30px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.content__list {
+  height: 298px;
+  overflow: auto;
+  position: relative;
+}
+
+.content__details {
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  margin-bottom: 26px;
+  font-family: 'Oswald', 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+  position: relative;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 100%;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.content__video-card-thumbnail {
+  display: block;
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: 100%;
+}
+
+.preloader {
+  position: absolute;
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  margin-bottom: 5px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  margin: 2px;
+}
+
+.content__video-card-title {
+  font-family: 'Oswald', 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-bottom: 6px;
+  flex-grow: 1;
+  flex-basis: 0;
+  overflow: hidden;
+}
+
+.content__video-card-description {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16px;
+  color: #FFFFFF;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  flex-basis: 0;
+  overflow: hidden;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__label {
+  width: fit-content;
+}
+
+.search-form__textfield {
+  appearance: none;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  background-color: transparent;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 10px;
+  width: 225px;
+  height: 27px;
+  border-width: 1px 0px;
+  border-style: solid;
+  border-color: #FFFFFF;
+}
+
+.search-form__label-text {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+}
+
+placeholder {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: "";
+  display: block;
+  position: relative;
+  top: 1px;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  margin: auto;
+}
+
+button {
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 194px;
+  height: 34px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.more-button {
+  width: 399px;
+  height: 34px;
+}
+
+input[type="text"]:focus + span {
+  outline: none;
+}
+
+input[type="text"]:has(:focus-visible) + span {
+  border-width: 1px 0px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  border-radius: 0%;
+} 
+
+input[type="text"]:active + span {
+  border: 1px solid #FFFFFF;
+  border-radius: 0%;
+}
+
+input[type="text"]:hover + span {
+  border-width: 1px 0px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  cursor: auto;
+}
+
+.search-form__pseudo-checkbox:active + span {
+  text-decoration: none;
+}
+
+.search-form__pseudo-checkbox:hover + span {
+  border-bottom: 1px solid #fff;
+  max-width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__label-text:hover {
+  border-bottom: 1px solid #fff;
+  max-width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+}
+
+.search-form__submit-button:active {
+  box-shadow: inset 0 0 0 100px rgb(255 255 255 / 0.1);
+  text-decoration: none;
+}
+
+.search-form__submit-button:hover {
+  text-decoration: underline;
+}
+
+.search-form__submit-button:focus {
+  outline: none;
+}
+
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link_current {
+  box-shadow: inset 0 0 0 100px rgb(255 255 255 / 0.1);
+  text-decoration: none;
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
+}
+
+.content__video-card:focus {
+  outline: none;
+}
+
+.content__video-card:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.more-button:active {
+  box-shadow: inset 0 0 0 100px rgb(255 255 255 / 0.1);
+  text-decoration: none;
+}
+
+.more-button:hover {
+  text-decoration: underline;
+}
+
+.more-button:focus {
+  outline: none;
+}
+
+.more-button:focus-visible {
+  outline: 1px solid #fff;
 }
